fix: fix squished layout caused by new oberver wrapper on info blocks in single.css

--- a/assets/css/pages/single.css
+++ b/assets/css/pages/single.css
@@ -53,6 +53,11 @@
   white-space: nowrap;
 }
 
+.jpt-project-info .jpt-observe {
+  width: fit-content;
+  height: fit-content;
+}
+
 .jpt-project-info-block {
   width: fit-content;
 }
